--- a/server/package.json
+++ b/server/package.json
@@ -1,12 +1,8 @@
 {
-  "name": "fant4stic_app",
+  "name": "comp30022-itproject-f4",
   "version": "1.0.0",
-  "description": "- Yusuke Noishiki - Sean Wong - Trung Lai (Tommy) - Garvin Bulkin",
-  "main": "index.js",
-  "dependencies": {
-    "concurrently": "^4.1.2"
-  },
-  "devDependencies": {},
+  "description": "Project for IT Project",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -14,11 +10,14 @@
     "type": "git",
     "url": "git+https://github.com/n-yuusuke/COMP30022-ITProject-F4.git"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/n-yuusuke/COMP30022-ITProject-F4/issues"
   },
-  "homepage": "https://github.com/n-yuusuke/COMP30022-ITProject-F4#readme"
+  "homepage": "https://github.com/n-yuusuke/COMP30022-ITProject-F4#readme",
+  "dependencies": {
+    "express": "^4.17.1"
+  },
+  "devDependencies": {}
 }
