--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
+    "react-timeline-semantic-ui": "^1.0.13",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
