--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "concurrently": "^4.1.2",
+    "dotenv": "^8.1.0",
+    "ejs": "^2.7.1",
     "express": "^4.17.1",
+    "multer": "^1.4.2",
     "mysql": "^2.17.1",
     "nodemon": "^1.19.2",
     "passport": "^0.4.0",
