--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-vertical-timeline-component": "^2.5.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
+    "semantic-ui-calendar-react": "^0.15.3",
     "semantic-ui-react": "^0.88.1",
     "typeface-roboto": "0.0.75"
   },
