--- a/client/package.json
+++ b/client/package.json
@@ -13,12 +13,14 @@
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
+    "react-slick": "^0.25.2",
     "react-timeline-semantic-ui": "^1.0.13",
     "react-vertical-timeline-component": "^2.5.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "semantic-ui-calendar-react": "^0.15.3",
     "semantic-ui-react": "^0.88.1",
+    "slick-carousel": "^1.8.1",
     "typeface-roboto": "0.0.75"
   },
   "scripts": {
