--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node server.js",
     "server": "nodemon server.js",
     "client": "cd client && npm start",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "test": "mocha"
   },
   "author": "",
   "license": "ISC",
@@ -25,5 +26,8 @@
     "passport": "^0.4.0",
     "passport-google-oauth20": "^2.0.0",
     "redux-thunk": "^2.3.0"
+  },
+  "devDependencies": {
+    "mocha": "^6.2.1"
   }
 }
