--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,8 @@
     "@material-ui/icons": "^4.5.1",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "d3": "^5.12.0",
+    "d3-dtree": "^2.2.2",
     "hookrouter": "^1.2.3",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
