--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^4.3.1",
     "d3": "^5.12.0",
     "d3-dtree": "^2.2.2",
+    "file-saver": "^2.0.2",
     "hookrouter": "^1.2.3",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
