--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,8 @@
     "d3-dtree": "^2.2.2",
     "file-saver": "^2.0.2",
     "hookrouter": "^1.2.3",
+    "jspdf": "^1.5.3",
+    "jspdf-autotable": "^3.2.9",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-icons": "^3.7.0",
